--- a/static/css/notes.css
+++ b/static/css/notes.css
@@ -2,6 +2,7 @@
 
 body {
     font-family: sans-serif;
+    font-size: 14px;
 }
 
 .container {
@@ -27,8 +28,6 @@ body {
 .row.sorting {
 
 }
-
-
 
 .sorting button:hover, .sorting button.active {
     background: #a9a9a9;
@@ -91,6 +90,13 @@ li.entry {
     float: left;
 }
 
+div.description {
+    max-height: 50px;
+}
+
+a.less {
+    display: none;
+}
 
 /* style for the note editor page */
 
@@ -102,7 +108,6 @@ li.entry {
     display: block;
     width: 150px;
     float: left;
-
 }
 
 .edit input.radio {
@@ -118,33 +123,4 @@ li.entry {
 
 .edit input.text {
     width: 200px;
-}
-
-
-/* WIP show shortened descriptions */
-.ellipsis {
-    width: 380px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-}
-/* WIP show shortened descriptions */
-.block-ellipsis {
-    display: block;
-    display: -webkit-box;
-    max-width: 100%;
-    height: 29px;
-    margin: 0 auto;
-    font-size: 14px;
-    line-height: 1;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
-/* just for development */
-
-.todo {
-    background-color: aquamarine;
 }
