Issue #11 and Issue #18: extreme css makeover and a small bugfix.

--- a/static/css/notes.css
+++ b/static/css/notes.css
@@ -41,6 +41,7 @@ li.entry {
     -webkit-padding-start: 0px;
     list-style-type: none;
     padding-top: 20px;
+    border-top: solid 1px;
 }
 
 .entry {
