--- a/static/css/skin-green.css
+++ b/static/css/skin-green.css
@@ -1,3 +1,21 @@
 body {
     background-color: greenyellow;
 }
+
+button:hover, button.active {
+    background-color: powderblue;
+    box-shadow: 0 5px darkgreen;
+    transform: translateY(5px);
+}
+
+button, select{
+    color: black;
+    background-color: powderblue;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 10px darkgreen;
+}
+
+li.entry {
+    border-top: #27496d solid 1px;
+}
