--- a/static/css/skin-grey.css
+++ b/static/css/skin-grey.css
@@ -1,3 +1,21 @@
 body {
     background-color: lightgray;
 }
+
+button:hover, button.active {
+    background-color: #417cb8;
+    box-shadow: 0 5px #27496d;
+    transform: translateY(5px);
+}
+
+button, select{
+    color: #fff;
+    background-color: #6496c8;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 10px #27496d;
+}
+
+li.entry {
+    border-top: #27496d solid 1px;
+}
